<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NattogDag</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_settings">Innstillinger</string>
    <string name="menu_settings">Innstillinger</string>
    <string name="map_preference_title">Karttype</string>
    <string name="movement_preference_title">Veibeskrivelse</string>
    <string name="map_category_title">Kart</string>
    <string name="gps_preference_title">GPS</string>
    <string name="location_update_title">Oppdatering</string>
    <string name="map_preference_summary">Velg karttype (påvirker datatrafikk)</string>
    <string name="gps_preference_summary">Automatisk sporing av min posisjon på kartet</string>
    <string name="location_preference_summary">Hvor ofte skal min posisjon oppdateres</string>
    <string name="movement_preference_summary">Velg transportmetode</string>
    <string name="preference_map_catecory">Kart</string>
    <string name="preference_gps_category">GPS</string>
    <string name="map_default">MAP_TYPE_NORMAL</string>
    <string name="movement_default">walking</string>
    <string name="movement_update_default">5</string>

    <string-array name="map_keys">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Terreng</item>
        <item>Satellitt</item>
        <item>Ingen</item>
    </string-array>
    <string-array name="map_values">
        <item>MAP_TYPE_NORMAL</item>
        <item>MAP_TYPE_HYBRID</item>
        <item>MAP_TYPE_TERRAIN</item>
        <item>MAP_TYPE_SATELLITE</item>
        <item>MAP_TYPE_NONE</item>
    </string-array>
    
    <string-array name="movement_keys">
        <item>Bil</item>
        <item>Sykkel</item>
        <item>Til fots</item>
    </string-array>
    
    <string-array name="movement_values">
        <item>driving</item>
        <item>bicycling</item>
        <item>walking</item>
    </string-array>
    
    <string-array name="movement_update_keys">
        <item>1 sekund</item>
        <item>5 sekunder</item>
        <item>10 sekunder</item>
        <item>15 sekunder</item>
        <item>20 sekunder</item>
        <item>30 sekunder</item>
        <item>1 minutt</item>
        <item>2 minutt</item>
        <item>3 minutt</item>
        <item>5 minutt</item>
        <item>10 minutt</item>
    </string-array>
    
    <string-array name="movement_update_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>300</item>
        <item>600</item>
    </string-array>

    <string name="title_activity_settings">Innstillinger</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>
